fix flicker

--- a/company.css
+++ b/company.css
@@ -88,3 +88,5 @@ ul li{
 #egg:hover{
   color: darkgreen;
 }
+
+svg > g > g:last-child { pointer-events: none };
